--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "mongoose": "^5.9.2",
+    "uuid": "^7.0.3",
     "validate.js": "^0.13.1"
   },
   "devDependencies": {}
