--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "mongoose": "^5.9.2",
     "nodemailer": "^6.4.6",
     "uuid": "^7.0.3",
-    "validate.js": "^0.13.1"
+    "validate.js": "^0.13.1",
+    "validator": "^13.1.1",
+    "validatorjs": "^3.18.1"
   },
   "devDependencies": {}
 }
