--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,14 @@
 {
     "env": {
         "browser": true,
-        "commonjs": true,
-        "es2021": true,
-        "node": true
+        "es2020": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:jest/recommended"
+        "airbnb-base"
     ],
     "parserOptions": {
         "ecmaVersion": 12
     },
     "rules": {
-        "jest/no-disabled-tests": "warn",
-        "jest/no-focused-tests": "error",
-        "jest/no-identical-title": "error",
-        "jest/prefer-to-have-length": "warn",
-        "jest/valid-expect": "error"
-    },
-    "plugins": ["jest"]
+    }
 }
