--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,9 @@
 {
     "env": {
         "browser": true,
-        "es2020": true
+        "commonjs": true,
+        "es2020": true,
+        "jest": true
     },
     "extends": [
         "airbnb-base"
