--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "mongodb-memory-server": "^6.9.6"
+    "mongodb-memory-server": "^6.9.6",
+    "supertest": "^6.1.3"
   }
 }
